--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leaflet tile maps</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
 
  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -133,6 +133,10 @@ function initMap(data, accessData) {
       latitude = 50.1109; // Frankfurt
       longitude = 8.6821;
       zoom = 14;
+    } else if (basemap == 'GeoportailFrance'){
+      latitude = 46.749998;
+      longitude = 1.85;
+      zoom = 6
     } else if (basemap === "OpenAIP") {
       latitude = 50.1109; // Frankfurt
       longitude = 8.6821;
@@ -285,7 +289,7 @@ function initMap(data, accessData) {
 }
 
 getJSON(
-  "https://raw.githubusercontent.com/geopandas/xyzservices/main/xyzservices/data/providers.json",
+  "providers.json",
   (err, data) => {
     var dataList = [];
     for ([key, val] of Object.entries(data)) {
